--- a/goal_allocator/package.xml
+++ b/goal_allocator/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="saiaravind@todo.todo">saiaravind</maintainer>
+  <maintainer email="bplacearavind@gmail.com">saiaravind</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -17,6 +17,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>rospy</build_depend>
   <build_depend>mavros_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>mavros</build_depend>
@@ -25,11 +26,13 @@
   <build_depend>message_generation</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
+  <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>mavros</build_export_depend>
 
 
   <exec_depend>roscpp</exec_depend>
+  <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>mavros</exec_depend>
   <exec_depend>mavros_msgs</exec_depend>
