1.Updated bash script to take module to run as input. 2.Bug fix for mission control ui for setting z and y axis config. 3.Bug fix for velocity and offboard node for mode change.

--- a/goal_allocator/CMakeLists.txt
+++ b/goal_allocator/CMakeLists.txt
@@ -50,11 +50,11 @@ include_directories(
 )
 
 
-add_executable(position_controller src/pose_controller.cpp)
-target_link_libraries(position_controller ${catkin_LIBRARIES})
+add_executable(state_manager src/state_manager.cpp)
+target_link_libraries(state_manager ${catkin_LIBRARIES})
 
 install(TARGETS
-  position_controller
+  state_manager
   #ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   #LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
